Fix spacing on Authorizer Settings page
WordPress 5.2 introduced minor shifts in admin layout; move the banner background image, and the multisite disabled overlay to compensate.

--- a/css/authorizer.css
+++ b/css/authorizer.css
@@ -1,6 +1,6 @@
 .toplevel_page_authorizer #wpbody-content > .wrap,
 .settings_page_authorizer #wpbody-content > .wrap {
-	background: url("../images/banner-772x250.jpg") repeat-x 5px -35px;
+	background: url("../images/banner-772x250.jpg") repeat-x 5px 0;
 	margin-left: -20px;
 	margin-right: 0;
 	padding-left: 20px;
@@ -29,7 +29,7 @@
 }
 .toplevel_page_authorizer #wpbody-content > .wrap > h2,
 .settings_page_authorizer #wpbody-content > .wrap > h2 {
-	margin: -10px 0 58px 15px;
+	margin: -10px 0 75px 15px;
 	padding-top: 80px;
 	font-size: 290%;
 	text-shadow: 1px 1px 3px #8d8d8d;
